--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             margin: 0;
             padding: 0;
             margin-top: 10px;
-            background-image: url('green-bottle.png');
+            background-image: url('leaf.png');
             background-size: contain;
             background-position: center;
             background-position: bottom;
